# ai-invoice-processing

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  invoice_pipeline_brief.md  package-lock.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml
apps/api/app/: auth.py  country_profiles.py  deps.py  main.py  models.py  repositories.py  storage.py
apps/api/app/core/: config.py
apps/api/app/services/: classify.py  enrich.py  extract.py  formatters.py  gemini_extractor.py  local_extractor.py  log.py  normalize.py  pdf.py  pipeline.py  validate.py
apps/api/scripts/: check_supabase_public_access.py
apps/api/tests/: test_api.py  test_classify.py  test_config_security.py  test_country_profiles.py  test_enrich.py  test_gemini_extractor.py  test_normalize.py  test_pdf.py  test_pipeline.py  test_supabase_security.py  test_validate_codes.py  test_validate_i18n.py
apps/web/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
graphify-out/: .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_detect.json  .graphify_python  .graphify_root  .graphify_uncached.txt
graphify-out/cache/: stat-index.json
supabase/: config.toml
supabase/migrations/: 0001_initial.sql  0002_add_country_code.sql  20260509182949_enable_rls_and_deleted_status.sql  20260515_add_client_config.sql  20260519072042_add_invoice_word_positions.sql  (+6 more)
(+29 files in other folders)
