[project]
name = "invoice-processing-api"
version = "0.1.0"
description = "FastAPI backend for AI invoice processing SaaS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "supabase>=2.10.0",
    "pymupdf>=1.24.0",
    "google-genai>=1.75.0",
    "openai>=1.30.0",
    "python-dotenv>=1.2.2",
    "pyjwt[crypto]>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
